--- a/02_StructuralHTML/starter/index.html
+++ b/02_StructuralHTML/starter/index.html
@@ -24,6 +24,7 @@
                 <p id="intro">This is my introduction to HTML5</p>
                 <p id="postBody">This is the body of my post</p>
                 <p id="conclusion">This is the conclusion of my post</p>
+                <b>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad autem minus voluptas illo a ex, ab sint officia nulla quibusdam ut facere doloribus perferendis at. Harum nihil commodi quisquam libero.</b>
             </div>
             <div id="articleFooter">
                 <div id="address">
