--- a/03_Hyperlinks/starter/index.html
+++ b/03_Hyperlinks/starter/index.html
@@ -37,9 +37,11 @@
         <hr>
         <p>
             If you have any queries or comments, please contact:<br>
-            Sheldon Cooper, Webmaster
+            <a href = "mailto: sheldon.cooper@qa.com">Sheldon Cooper, Webmaster</a>
         </p>
     </footer>
+    <a href="courses.html">Courses Page</a>
+    
 </body>
 
 </html>
